--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "api-express",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "prod": "node index.js"
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js"
   },
   "author": "",
   "license": "ISC",
