--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "api-template",
+  "name": "cls",
   "version": "1.0.0",
-  "description": "api-express",
+  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2",
-    "moment": "^2.30.1",
-    "nodemon": "^3.1.9"
+    "moment": "^2.30.1"
   }
 }
