--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run start:local",
-    "start:local": "cross-env NODE_ENV=default nodemon index.js",
-    "start:production": "cross-env NODE_ENV=production node index.js --production"
+    "start:local": "cross-env nodemon index.js",
+    "start:production": "cross-env node index.js --production"
   },
   "lint-staged": {
     "**/*.js": [
