--- a/package.json
+++ b/package.json
@@ -17,36 +17,21 @@
   "author": "Sahil Patel <sahilpatel120302@gmail.com>",
   "dependencies": {
     "@hapi/basic": "^7.0.2",
-    "@hapi/boom": "~10.0.1",
     "@hapi/glue": "^9.0.1",
-    "@hapi/good": "^9.0.1",
-    "@hapi/good-console": "^9.0.1",
-    "@hapi/good-squeeze": "^6.0.0",
-    "@hapi/hapi": "^21.3.2",
     "@hapi/inert": "^7.1.0",
     "@hapi/vision": "^7.0.3",
-    "@hapi/wreck": "^18.1.0",
     "@hapipal/schmervice": "^3.0.0",
-    "bcrypt": "^5.1.1",
     "bluebird": "^3.7.2",
-    "config": "^3.3.9",
-    "cross-env": "^7.0.3",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.3.1",
-    "glob": "^10.3.10",
-    "hapi-auth-jwt2": "^10.7.0",
+    "dotenv": "^16.4.7",
+    "glob": "^11.0.1",
+    "hapi-auth-jwt2": "^11.0.0",
     "hapi-dev-errors": "^4.0.0",
-    "hapi-swagger": "^17.2.0",
-    "joi": "^17.13.3",
-    "joi-objectid": "^4.0.2",
-    "jsonwebtoken": "^9.0.2",
+    "hapi-swagger": "^17.3.2",
     "module-alias": "^2.2.3",
-    "moment-timezone": "^0.5.46",
-    "mongoose": "^8.9.5",
+    "moment-timezone": "^0.5.47",
+    "mongoose": "^8.12.1",
     "mrhorse": "^7.0.2",
-    "nodemailer": "^6.10.0",
-    "razorpay": "^2.9.5",
-    "uuid": "^11.0.5"
+    "schmervice": "^1.0.0"
   },
   "_moduleAliases": {
     "@root": ".",
@@ -58,23 +43,5 @@
     "@policies": "server/policies",
     "@api": "server/api",
     "@validator": "server/api/validator"
-  },
-  "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-prettier-standard": "^4.0.1",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "husky": "^8.0.3",
-    "jest": "^29.7.0",
-    "lint-staged": "^15.2.0",
-    "nodemon": "^3.0.2",
-    "prettier": "^3.1.1",
-    "prettier-config-standard": "^7.0.0"
   }
 }
