--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
   },
   "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/index.js"
+      "src": "/.*",
+      "dest": "/index.js"
     }
   ]
 }
