--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URI=mongodb://localhost:27017/hapi-backend
+MONGO_URI=mongodb+srv://sahilpatel3584:AGM8rOjchN3cCLfF@pgmanagement.cwd84q6.mongodb.net/pgmanagement
 JWT_SECRET=your_jwt_secret_key
